from controller import Robot, Camera

# Create a Robot instance
robot = Robot()

# Get the time step of the current world
timestep = int(robot.getBasicTimeStep())

# Get handle to bumper node
bumper = robot.getDevice("bumper")
bumper.enable(timestep)

# Get handle to motors
left_motor = robot.getDevice("left wheel motor")
right_motor = robot.getDevice("right wheel motor")
left_motor.setPosition(float('inf'))
right_motor.setPosition(float('inf'))
left_motor.setVelocity(0.0)
right_motor.setVelocity(0.0)

# Get handle to camera
camera = robot.getDevice("camera")
camera.enable(timestep)
camera.recognitionEnable(timestep)

# Constants for motor velocity
FORWARD_VELOCITY = 4.0
TURN_VELOCITY = 1.0

# Placeholder detect_objects function
def detect_objects(image):
    print("Object detection is not implemented.")
    return []

# Function to move the bot forward
def move_forward():
    left_motor.setVelocity(FORWARD_VELOCITY)
    right_motor.setVelocity(FORWARD_VELOCITY)

# Function to turn the bot
def turn():
    left_motor.setVelocity(-TURN_VELOCITY)
    right_motor.setVelocity(TURN_VELOCITY)

# Main program loop
while robot.step(timestep) != -1:
    move_forward()
    
    # Check if the bumper is hit
    if bumper.getValue():
        turn()
   
    # Get camera image
    image = camera.getImage()
    
    # Process camera image and detect objects
    detected_objects = detect_objects(image)
    
    # Print the detected objects to the terminal
    print("Detected objects:", detected_objects)
